# tb3_apriltag_ws

./: .gitignore  README.md
src/apriltag_bringup/: CMakeLists.txt  package.xml
src/apriltag_bringup/launch/: tb3_apriltag_system.launch.py
src/apriltag_follower/: package.xml  pytest.ini  setup.cfg  setup.py
src/apriltag_follower/apriltag_follower/: follower_node.py
src/apriltag_follower/config/: follower.yaml
src/apriltag_follower/launch/: follower.launch.py
src/apriltag_follower/test/: conftest.py  test_follower_node.py
src/apriltag_mover/: package.xml  pytest.ini  setup.cfg  setup.py
src/apriltag_mover/apriltag_mover/: mover_node.py
src/apriltag_mover/config/: mover.yaml
src/apriltag_mover/launch/: mover.launch.py
src/apriltag_mover/scripts/: mover_node
src/apriltag_mover/test/: conftest.py  test_mover_node.py
src/apriltag_perception/: CMakeLists.txt  package.xml
src/apriltag_perception/apriltag_perception/: distance_visualizer.py  visualize_detections.py
src/apriltag_perception/config/: apriltag.rviz  apriltag.yaml  visualize.rviz
src/apriltag_perception/launch/: detection.launch.py  visualize.launch.py
src/apriltag_perception/scripts/: camera_frame_relay  distance_visualizer  visualize_detections
src/apriltag_sim/: CMakeLists.txt  package.xml
src/apriltag_sim/launch/: sim.launch.py
src/apriltag_sim/models/apriltag_marker/: cube_model.sdf  model.config
src/apriltag_sim/worlds/: simple_world.sdf
