<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>apriltag_follower</name>
  <version>0.1.0</version>
  <description>Pose-based AprilTag follower for TurtleBot3</description>
  <maintainer email="arbazkhan5300@gmail.com">Arbaz</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>apriltag_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export><build_type>ament_python</build_type></export>
</package>