<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>apriltag_mover</name>
  <version>0.1.0</version>
  <description>Minimal waypoint mover for AprilTag cube</description>
  <maintainer email="arbazkhan5300@gmail.com">Arbaz</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>

  <export><build_type>ament_python</build_type></export>
</package>