<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>apriltag_perception</name>
  <version>0.1.0</version>
  <description>AprilTag detection pipeline.</description>
  <maintainer email="arbazkhan5300@gmail.com">Arbaz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>apriltag_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>