<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>apriltag_sim</name>
  <version>0.0.0</version>
  <description>Gazebo Harmonic world and models for AprilTag follower</description>
  <maintainer email="arbazkhan5300@gmail.com">Arbaz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>        
  <exec_depend>ros_gz_bridge</exec_depend>    
  <exec_depend>ros_gz_image</exec_depend>     
  <exec_depend>turtlebot3_gazebo</exec_depend> 
  <exec_depend>turtlebot3_description</exec_depend> 
  <exec_depend>robot_state_publisher</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
